--- a/Resume_Revant_Kumar.tex
+++ b/Resume_Revant_Kumar.tex
@@ -45,14 +45,14 @@
 
 \schoolWithCourses{Indian Institute of Technology Guwahati}{India}{Bachelor of Technology in Mathematics and Computing}{July 2010 -- May 2014}{GPA: 3.9/4.0}
 \vspace{-2pt}
-\area{Selected Coursework:}{Introduction to Computing {\tiny$\bullet$} Data Structures {\tiny$\bullet$} Data Structures Lab {\tiny$\bullet$} Design and Analysis of Algorithms {\tiny$\bullet$} Probability Theory and Random Processes {\tiny$\bullet$} Operating Systems {\tiny$\bullet$} Scientific Computing}
+\area{Selected Coursework:}{Introduction to Computing {\tiny$\bullet$} Data Structures {\tiny$\bullet$} Data Structures Lab {\tiny$\bullet$} Design and Analysis of Algorithms {\tiny$\bullet$} Probability Theory and Random Processes {\tiny$\bullet$} Operating Systems {\tiny$\bullet$} Databases {\tiny$\bullet$} Scientific Computing}
 
 \vspace{-1pt}\header{Work/Research Experience}
 
 \employer{Japan Advanced Institute of Science and Technology}{Japan}{May -- July 2012}{Research Assistant}
 	\begin{achievements}	
 	\item Developed a Small Space Algorithm for Removing Small Connected Components from a Binary Image with Professor Tetsuo Asano.
-	\item From an algorithmic point of view, the problem can be solved in $O(n)$ time and $O(n)$ work space. 
+	%\item From an algorithmic point of view, the problem can be solved in $O(n)$ time and $O(n)$ work space. 
 	\item Proposed a new algorithm for computing the size-threshold binary image in $O(n \log n)$ time using only $O(\sqrt{n})$ work space.
 	%for any binary image of $n$ pixels in $O(n \log n)$ time using only $O(\sqrt{n})$ work space.
 	\end{achievements}
@@ -81,22 +81,40 @@
 
 \project{SMS Spam Detection}{Georgia Institute of Technology}{October 2014 -- Present}
 	\begin{achievements}
-	\item Built binary classifiers to distinguish between legitimate and spam SMSes based on their text features.
+	\item Built binary classifiers to distinguish between legitimate and spam SMSes based on their text features in Python.
 	\item Implemented classifiers using Naive Bayes with Laplace Smoothing and Support Vector Machine (SVM) with Linear Kernel.
-	%\item Achieved around 97\% overall accuracy for both the classifiers.
+	\item Achieved mean accuracy of 98.79\% for Naive Bayes Classifier and 97.68\% for SVM Classifier.
+	\end{achievements}	
+	
+\project{Decision Tree}{Georgia Institute of Technology}{November 2014 -- Present}
+	\begin{achievements}
+	\item Implemented a Decision Tree using ID3 Heuristic for the given salary dataset in Python.
+	\item Applied 10-fold cross validation to obtain the mean accuracy of 85.2\%.
+	\end{achievements}	
+	
+\project{Topic Modeling on Yelp Reviews}{Georgia Institute of Technology}{October 2014 -- Present}
+	\begin{achievements}
+	\item Applied Latent Dirichlet Allocation (LDA) to Yelp Reviews to extract specific topics from them.
+	\item Predicted ratings of extracted topics for each review by applying Multi-Aspect Sentiment Analysis, instead of overall rating of reviews.
+	\end{achievements}	
+	
+\project{Recommendation System}{Georgia Institute of Technology}{October -- November 2014}
+	\begin{achievements}
+	\item Implemented a Recommender System using Low-Rank Matrix Factorization and Gradient Descent in Matlab.
+	\item Achieved Root Mean Square Error (RMSE) of 0.93 on the test data-set.
 	\end{achievements}	
 
-\project{Image Compression}{Georgia Institute of Technology}{October 2014 -- Present}
+\project{Image Compression}{Georgia Institute of Technology}{September -- October 2014}
 	\begin{achievements}
 	\item Given a RGB bitmap image file, clustered the pixels using algorithms -- K-means \& K-medoids in Matlab.
 	\item In K-medoids clustering, Manhattan Distance and Partitioning Around Medoids (PAM) algorithm were used.
-	\item Created the final compressed image by coloring each cluster with the representative color of it's centroid.
+	%\item Created the final compressed image by coloring each cluster with the representative color of it's centroid.
 	\end{achievements}	
 
 \project{Collecting and Visualizing Last.fm Data}{Georgia Institute of Technology}{August -- September 2014}
 	\begin{achievements}
-	\item Used the Last.fm API to download data about music tracks, and 100 similar tracks for each track.
-	\item Wrote Python Scripts to create and clean the data files using the downloaded Last.fm data.
+	%\item Used the Last.fm API to download data about music tracks, and 100 similar tracks for each track.
+	\item Wrote Python Scripts to collect and clean the data about similar music tracks using the Last.fm API.
 	\item Used the tool Gephi to visualize the data as an undirected graph.
 	\end{achievements}	
 
@@ -109,30 +127,27 @@
 \project{Machine Translation System using Translation Memory}{Indian Institute of Technology Guwahati}{January -- March 2014}
 	\begin{achievements}
 	\item Implemented a Machine Translation System using Translation Memory.
-	\item Found close matches from Translation Memory using Edit-Based Distance.
-	\item Worked on Target-Language Edit Hints.
+	\item Found close matches from Translation Memory using Edit-Based Distance and worked on Target-Language Edit Hints.
 	\end{achievements}	
 	
 \vspace{3pt}
 
-
-
 \header{Skills}
 \begin{achievements}
 \item Programming Languages: C, C++, Python
-\item Familiarity with Matlab, SQLite, HTML, D3.js, Gephi, Tableau, Git, \LaTeX
+\item Familiarity with Matlab, SQLite, D3.js, Gephi, Tableau, HTML, Git, \LaTeX, Octave, Weka%, MongoDB, Robomongo, Hadoop, Pig
 \item Familiarity with Linux, Mac OS X, Windows
 \item Natural Languages: English, Hindi, Spanish (Current Level 7 on Duolingo), Japanese (Basic)
 \end{achievements}
 	
 \vspace{3pt}
 	
-\header{Publications/Presentations}
+\header{Publication}%s/Presentations}
 \begin{achievements}
 \item Journal Publication: Tetsuo Asano, Revant Kumar: A Small-Space Algorithm for Removing Small Connected Components from a Binary Image. IEICE Transactions, Vol. E96-A, No. 6, pp. 1044-1050 (June 2013)
 %\item Poster: Revant Kumar, Arjun Sharma, Sandipan Dandapat and Partha Sarathi Mandal: Machine Translation Systems Using Translation Memory. IIT Guwahati (May 2014)
-\item Mention in Acknowledgements: Bharath Sriperumbudur, Kenji Fukumizu, Arthur Gretton, Aapo Hyv\"{a}rinen: Density Estimation in Infinite Dimensional Exponential Families. arXiv:1312.3516 [math.ST] (December 2013)
-\item Presentation: Revant Kumar and Ulrich R\"{u}de: "Multigrid Methods", 11th Indo-German Winter Academy, December 11-17, 2012.
+%\item Journal Publication (Under Review): Bharath Sriperumbudur, Kenji Fukumizu, Revant Kumar, Arthur Gretton, Aapo Hyv\"{a}rinen: Density Estimation in Infinite Dimensional Exponential Families. Annals of Statistics (Submitted in October 2014)
+%\item Presentation: Revant Kumar and Ulrich R\"{u}de: ``Multigrid Methods'', 11th Indo-German Winter Academy, December 11-17, 2012.
 \end{achievements} 
 
 \vspace{3pt}
@@ -141,9 +156,9 @@
 \begin{achievements}
 \item Erd\H{o}s Number: 3; Path: Revant Kumar $\rightarrow$ Tetsuo Asano $\rightarrow$ Boris Aronov / Frances F. Yao $\rightarrow$ Paul Erd\H{o}s
 %\item Selected among the top 2 undergraduates from IIT Guwahati to participate in the 11th Indo-German Winter Academy 2012 under the supervision of Professor Ulrich Rude from University of Erlangen Nuremberg, Germany.
-\item Best Student Technical Presentation Award at Techniche, IIT Guwahati in September 2012
+%\item Best Student Technical Presentation Award at Techniche, IIT Guwahati in September 2012
 %\item Received MCM Scholarship for 3 years from IIT Guwahati 
-\item Completed Youth Empowerment and Skills (YES+) Course offered by The Art of Living
+%\item Completed Youth Empowerment and Skills (YES+) Course offered by The Art of Living
 \end{achievements}
 
 %\vspace{4pt}
