--- a/Resume_Revant_Kumar.tex
+++ b/Resume_Revant_Kumar.tex
@@ -39,27 +39,35 @@
 
 \vspace{-9pt}\header{Education}
 
-\schoolWithCoursesWithoutGpa{Georgia Institute of Technology}{USA}{Master of Science in Computer Science}{August 2014 -- December 2015 (Expected)}
+\schoolWithCourses{Georgia Institute of Technology}{USA}{Master of Science in Computer Science}{August 2014 -- December 2015 (Expected)}{GPA: 3.75/4.00}
 \vspace{-2pt}
-\area{Selected Coursework:}{Machine Learning {\tiny$\bullet$} Data and Visual Analytics  {\tiny$\bullet$} Algorithms {\tiny$\bullet$} Social Computing}
+\area{Selected Coursework:}{Machine Learning {\tiny$\bullet$} Data and Visual Analytics {\tiny$\bullet$} Algorithms {\tiny$\bullet$} Social Computing {\tiny$\bullet$}  Deep Learning for Perception* {\tiny$\bullet$}  Advanced Internet Computing* {\tiny$\bullet$} Web Search \& Text Mining* \ \ \ \ \ \ \ \  (* -- Courses going to take in Spring'15)}
+%\area{}{* -- Courses going to take in Spring'15}
 
 \schoolWithCourses{Indian Institute of Technology Guwahati}{India}{Bachelor of Technology in Mathematics and Computing}{July 2010 -- May 2014}{GPA: 3.9/4.0}
-\vspace{-2pt}
-\area{Selected Coursework:}{Introduction to Computing {\tiny$\bullet$} Data Structures {\tiny$\bullet$} Data Structures Lab {\tiny$\bullet$} Design and Analysis of Algorithms {\tiny$\bullet$} Probability Theory and Random Processes {\tiny$\bullet$} Operating Systems {\tiny$\bullet$} Databases {\tiny$\bullet$} Scientific Computing}
+%\vspace{-2pt}
+%\area{Selected Coursework:}{Introduction to Computing {\tiny$\bullet$} Data Structures {\tiny$\bullet$} Data Structures Lab {\tiny$\bullet$} Design and Analysis of Algorithms {\tiny$\bullet$} Probability Theory and Random Processes {\tiny$\bullet$} Operating Systems {\tiny$\bullet$} Databases {\tiny$\bullet$} Scientific Computing}
 
-\vspace{-1pt}\header{Work/Research Experience}
+\vspace{3pt}
 
-\employer{Japan Advanced Institute of Science and Technology}{Japan}{May -- July 2012}{Research Assistant}
+\header{Work/Research Experience}
+
+%\employer{Information Interfaces Research Group}{USA}{December 2014 -- Present}{Graduate Research Assistant under Professor John Stasko}
+%	\begin{achievements}	
+%	\item Working on building a a Simplified Specification of Information Visualization which is the Challenge of Interaction
+%	\end{achievements}
+
+\employer{Japan Advanced Institute of Science and Technology}{Japan}{May -- July 2012}{Research Assistant under Professor Tetsuo Asano}
 	\begin{achievements}	
-	\item Developed a Small Space Algorithm for Removing Small Connected Components from a Binary Image with Professor Tetsuo Asano.
+	\item Developed a Small Space Algorithm for Removing Small Connected Components from a Binary Image.
 	%\item From an algorithmic point of view, the problem can be solved in $O(n)$ time and $O(n)$ work space. 
 	\item Proposed a new algorithm for computing the size-threshold binary image in $O(n \log n)$ time using only $O(\sqrt{n})$ work space.
 	%for any binary image of $n$ pixels in $O(n \log n)$ time using only $O(\sqrt{n})$ work space.
 	\end{achievements}
 
-\employer{Institute of Statistical Mathematics}{Japan}{May -- July 2013}{Research Assistant}
+\employer{Institute of Statistical Mathematics}{Japan}{May -- July 2013}{Research Assistant under Professor Kenji Fukumizu}
 	\begin{achievements}
-	\item Worked on Density Estimation in Infinite Dimensional Exponential Families with Professor Kenji Fukumizu.
+	\item Worked on Density Estimation in Infinite Dimensional Exponential Families.
 	\item Reviewed the Mathematical Equations for the Journal Paper and De-bugged the Matlab Code which was later used for simulation.
 	\end{achievements}
 	
@@ -79,20 +87,20 @@
 
 \header{Projects}
 
-\project{SMS Spam Detection}{Georgia Institute of Technology}{October 2014 -- Present}
+\project{SMS Spam Detection}{Georgia Institute of Technology}{October -- December 2014}
 	\begin{achievements}
 	\item Built binary classifiers to distinguish between legitimate and spam SMSes based on their text features in Python.
 	\item Implemented classifiers using Naive Bayes with Laplace Smoothing and Support Vector Machine (SVM) with Linear Kernel.
 	\item Achieved mean accuracy of 98.79\% for Naive Bayes Classifier and 97.68\% for SVM Classifier.
 	\end{achievements}	
 	
-\project{Decision Tree}{Georgia Institute of Technology}{November 2014 -- Present}
+\project{Decision Tree}{Georgia Institute of Technology}{November -- December 2014}
 	\begin{achievements}
 	\item Implemented a Decision Tree using ID3 Heuristic for the given salary dataset in Python.
 	\item Applied 10-fold cross validation to obtain the mean accuracy of 85.2\%.
 	\end{achievements}	
 	
-\project{Topic Modeling on Yelp Reviews}{Georgia Institute of Technology}{October 2014 -- Present}
+\project{Topic Modeling on Yelp Reviews}{Georgia Institute of Technology}{October -- December 2014}
 	\begin{achievements}
 	\item Applied Latent Dirichlet Allocation (LDA) to Yelp Reviews to extract specific topics from them.
 	\item Predicted ratings of extracted topics for each review by applying Multi-Aspect Sentiment Analysis, instead of overall rating of reviews.
@@ -145,6 +153,7 @@
 \header{Publication}%s/Presentations}
 \begin{achievements}
 \item Journal Publication: Tetsuo Asano, Revant Kumar: A Small-Space Algorithm for Removing Small Connected Components from a Binary Image. IEICE Transactions, Vol. E96-A, No. 6, pp. 1044-1050 (June 2013)
+%\item Journal Publication (Under Review): Bharath Sriperumbudur, Kenji Fukumizu, Revant Kumar, Arthur Gretton, Aapo Hyv\"{a}rinen: Density Estimation in Infinite Dimensional Exponential Families. Annals of Statistics (Submitted in October 2014)
 %\item Poster: Revant Kumar, Arjun Sharma, Sandipan Dandapat and Partha Sarathi Mandal: Machine Translation Systems Using Translation Memory. IIT Guwahati (May 2014)
 %\item Journal Publication (Under Review): Bharath Sriperumbudur, Kenji Fukumizu, Revant Kumar, Arthur Gretton, Aapo Hyv\"{a}rinen: Density Estimation in Infinite Dimensional Exponential Families. Annals of Statistics (Submitted in October 2014)
 %\item Presentation: Revant Kumar and Ulrich R\"{u}de: ``Multigrid Methods'', 11th Indo-German Winter Academy, December 11-17, 2012.
